# voxsol

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
cmake/: CommonFlags.cmake  Cpp11.cmake  FindSolverDependencies.cmake
dependencies/gtest-1.8.0/lib/x64/: gtest.lib
dependencies/libMMV/include/libmmv/algorithm/: RandomAlgorithms.h  VectorAlgorithms.h
dependencies/libMMV/include/libmmv/io/datasource/: CachingImageStackDatasource.h  ImageStackDirectoryDatasource.h  MRCDataSource.h
dependencies/libMMV/include/libmmv/io/rangetransformation/: IdentityRangeTransformation.h  LinearRangeTransformation.h  RangeTransformation.h
dependencies/libMMV/include/libmmv/io/serializer/: VolumeFileFormatWriter.h
dependencies/libMMV/include/libmmv/math/: Matrix3x3.h  Matrix4x4.h  MatrixStreams.h  Vec2.h  Vec3.h  Vec4.h
dependencies/libMMV/include/libmmv/model/volume/: BoundingBox.h  ByteVolume.h  FloatVolume.h  HalfFloatVolume.h  Volume.h  VolumeProperties.h
examples/: aluminium_silicon.mrc  aluminium_silicon.xml
frontend/: CMakeLists.txt
frontend/src/: main.cpp
frontend/src/io/: CommandLine.h
src/: main.cpp  stdafx.h
src/equations/: BaseIntegrals.h  LinearBaseIntegrals.h  QuadraticBaseIntegrals.h
src/gpu/: CudaCommonFunctions.h  CudaDebugHelper.h  GPUParameters.h
src/gpu/kernels/: CK_ComputeLHSMatrices.h  CK_SolveDisplacement.cpp  CK_SolveDisplacement.h  CudaKernel.h  FullResidualUpdateKernel.cpp  FullResidualUpdateKernel.h  ImportanceSamplingKernel.cpp  ImportanceSamplingKernel.h  SolveDisplacementKernel.cpp  SolveDisplacementKernel.h
src/gpu/kernels/cuda/: CK_ComputeLHSMatrices.cu  CK_SolveDisplacement.cu  FullResidualUpdateCuda.cu  ImportanceSamplingCuda.cu  InvalidateOverlappingBlocks.cu  SolveDisplacementCuda.cu  SolveDisplacementCudaGlobal.cu  SolveDisplacementCudaGlobalResiduals.cu  UpdateImportancePyramid.cu
src/gpu/sampling/: ImportanceBlockSampler.cpp  ImportanceBlockSampler.h  ImportanceVolume.cpp  ImportanceVolume.h  ResidualVolume.cpp  ResidualVolume.h  WaveSampler.cpp  WaveSampler.h
src/io/: CSVSolutionWriter.cpp  CSVSolutionWriter.h  MRCImporter.cpp  MRCImporter.h  MRCVoxelImporter.cpp  MRCVoxelImporter.h  VTKImportanceVisualizer.cpp  VTKImportanceVisualizer.h  VTKSamplingVisualizer.cpp  VTKSamplingVisualizer.h  VTKSolutionStructuredVisualizer.cpp  VTKSolutionStructuredVisualizer.h  VTKSolutionStructuredWriter.cpp  VTKSolutionStructuredWriter.h  VTKSolutionVisualizer.cpp  VTKSolutionVisualizer.h  VTKSolutionWriter.cpp  VTKSolutionWriter.h  VTKVisualizer.cpp  VTKVisualizer.h  XMLProblemDeserializer.cpp  XMLProblemDeserializer.h
src/material/: Material.cpp  Material.h  MaterialConfiguration.cpp  MaterialConfiguration.h  MaterialConfigurationEquations.cpp  MaterialConfigurationEquations.h  MaterialConfigurationEquationsFactory.cpp  MaterialConfigurationEquationsFactory.h  MaterialDictionary.cpp  MaterialDictionary.h  MaterialFactory.cpp  MaterialFactory.h
src/math/: Matrix3x3.cpp  Matrix3x3.h
src/problem/: DirichletBoundary.h  DiscreteProblem.cpp  DiscreteProblem.h  Material.cpp  Material.h  MaterialConfiguration.h  NeumannBoundary.cpp  NeumannBoundary.h  ProblemFragment.cpp  ProblemFragment.h  ProblemFragmentKey.h  ProblemInstance.cpp  ProblemInstance.h
src/problem/boundaryconditions/: BoundaryProjector.cpp  BoundaryProjector.h  BoundaryProjectorPositiveX.cpp  DirichletBoundary.cpp  DirichletBoundary.h  DisplacementBoundary.cpp  DisplacementBoundary.h  NeumannBoundary.cpp  NeumannBoundary.h  ProblemSideIterator.cpp  ProblemSideIterator.h
src/solution/: FragmentSignature.cpp  FragmentSignature.h  MaterialConfigurationEquations.cpp  MaterialConfigurationEquations.h  MaterialConfigurationEquationsFactory.cpp  MaterialConfigurationEquationsFactory.h  MatrixPrecomputer.cpp  MatrixPrecomputer.h  MatrixStore.cpp  MatrixStore.h  Solution.cpp  Solution.h  SolutionAnalyzer.cpp  SolutionAnalyzer.h  Vertex.h
src/solution/samplers/: BlockSampler.cpp  BlockSampler.h  RandomBlockSampler.cpp  RandomBlockSampler.h  SequentialBlockSampler.cpp  SequentialBlockSampler.h
src/tools/: LODGenerator.cpp  LODGenerator.h
test/: CMakeLists.txt  CMakeTests.cmake
test/data/: 8x8x8_with_4x4x6_cube.mrc  8x8x8_with_4x4x6_cube.xml  8x8x8_with_diamond.mrc
test/src/integration/: Main.cpp  dummy.h
test/src/integration/barproblems/: CompressionLoad.cpp
test/src/integration/cubeproblems/: InitialDisplacementTests.cpp
test/src/integration/integrationHelpers/: Templates.cpp
test/src/unit/: Main.cpp
test/src/unit/equations/: BaseIntegralTests.cpp
test/src/unit/gpu/: BasicCudaTests.cpp  ComputeLHSMatrices.cpp
test/src/unit/gpu/sampling/: ImportanceVolumeTests.cpp
test/src/unit/helpers/: IOHelper.cpp  IOHelper.h  ProblemInspector.cpp  ProblemInspector.h  RHSMatricesReader.cpp  RHSMatricesReader.h  ResidualVolumeInspector.cpp  ResidualVolumeInspector.h  SolutionInspector.cpp  SolutionInspector.h  Templates.cpp  Templates.h
test/src/unit/io/: MRCVoxelImporterTests.cpp  XMLProblemDeserializerTests.cpp
test/src/unit/material/: MCEFactoryTests.cpp  MaterialConfigurationTests.cpp
test/src/unit/material/data/: MCEFactoryTests.MixSteelNullVertex_2_0_0.txt  MCEFactoryTests.MixSteelNullVertex_2_1_1.txt
test/src/unit/problem/: BoundaryProjectionTests.cpp  DiscreteProblemTests.cpp  ProblemFragmentKeyTests.cpp
test/src/unit/solution/: MCEFactoryTests.cpp  MatrixPrecomputerTests.cpp  SolutionTests.cpp
test/src/unit/tools/: LODGeneratorTests.cpp
